[gd_scene load_steps=2 format=3 uid="uid://bq27mhkthy6yn"]

[ext_resource type="Script" path="res://MenuLAN.gd" id="1_akssw"]

[node name="LAN" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = 6.0
offset_right = 16.0
offset_bottom = 6.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_akssw")

[node name="ListaJogadores" type="ItemList" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -122.5
offset_top = -219.5
offset_right = 122.5
offset_bottom = 219.5
grow_horizontal = 2
grow_vertical = 2

[node name="buttons" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -104.5
offset_top = -94.0
offset_right = 104.5
grow_horizontal = 2
grow_vertical = 0

[node name="Criar" type="Button" parent="buttons"]
layout_mode = 2
size_flags_vertical = 4
text = "Criar
"

[node name="Conectar" type="Button" parent="buttons"]
layout_mode = 2
size_flags_vertical = 4
text = "Conectar"

[node name="Comecar" type="Button" parent="buttons"]
layout_mode = 2
size_flags_vertical = 4
text = "Come√ßar
"

[node name="Label" type="Label" parent="."]
layout_mode = 2
offset_left = 832.0
offset_top = 111.0
offset_right = 847.0
offset_bottom = 137.0
grow_horizontal = 2
grow_vertical = 2
text = "IP
"
horizontal_alignment = 3
vertical_alignment = 3

[node name="IpEdit" type="LineEdit" parent="."]
layout_mode = 2
offset_left = 850.0
offset_top = 109.0
offset_right = 1067.0
offset_bottom = 140.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
text = "127.0.0.1"
alignment = 3

[node name="Label2" type="Label" parent="."]
layout_mode = 2
offset_left = 801.0
offset_top = 146.0
offset_right = 848.0
offset_bottom = 172.0
grow_horizontal = 2
grow_vertical = 2
text = "Nome"
horizontal_alignment = 3
vertical_alignment = 3

[node name="NomeEdit" type="LineEdit" parent="."]
layout_mode = 2
offset_left = 850.0
offset_top = 146.0
offset_right = 1067.0
offset_bottom = 177.0
grow_horizontal = 2
grow_vertical = 2
text = "Jogador"
alignment = 3

[connection signal="pressed" from="buttons/Criar" to="." method="_on_criar_pressed"]
[connection signal="pressed" from="buttons/Conectar" to="." method="_on_conectar_pressed"]
[connection signal="pressed" from="buttons/Comecar" to="." method="_on_comecar_pressed"]
